--- a/our-experience-app/package.json
+++ b/our-experience-app/package.json
@@ -18,6 +18,7 @@
   "dependencies": {
     "bcryptjs": "^2.4.3",
     "connect-flash": "^0.1.1",
+    "csurf": "^1.11.0",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "express-session": "^1.17.2",
@@ -35,6 +36,7 @@
   "devDependencies": {
     "@types/bcryptjs": "^2.4.2",
     "@types/connect-flash": "0.0.37",
+    "@types/csurf": "^1.11.2",
     "@types/express": "^4.17.13",
     "@types/express-session": "^1.17.4",
     "@types/helmet": "^4.0.0",
